<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 4iiii Innovations Inc.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use,copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.obvious.ocelotboilerplate.ObviousBoilerplateActivity">

    <TextView
        android:id="@+id/featuredevicenamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/obvious_label_devicename"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/featuredevicename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="Tingy52"
        android:text="@string/obvious_device_blank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toTopOf="@+id/featuredevicenamelabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/featuredeviceseriallabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/obvious_label_deviceserial"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@+id/featuredevicenamelabel"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/featuredeviceserial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="A1A1A1A1A1A1A1A1"
        android:text="@string/obvious_device_blank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toTopOf="@+id/featuredeviceseriallabel"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/featuredevicefirmwarelabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/obvious_label_devicefirmware"
        app:layout_constraintTop_toTopOf="@+id/featuredevicefirmwarelayout"
        app:layout_constraintBottom_toBottomOf="@+id/featuredevicefirmwarelayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/featuredevicefirmwarelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/featuredeviceserial"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/featuredevicefirmware"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.85"
            tools:text="1.2.3"
            android:text="@string/obvious_device_blank"
            />

        <ImageButton
            android:id="@+id/featuredevicefirmwarecheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            app:srcCompat="@drawable/ic_refresh_24px" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/featuredevicebootlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/obvious_label_deviceboot"
        app:layout_constraintTop_toBottomOf="@+id/featuredevicefirmwarelayout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/featuredeviceboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="4.5.6"
        android:text="@string/obvious_device_blank"
        app:layout_constraintTop_toBottomOf="@+id/featuredevicefirmwarelayout"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/featuredevicesoftlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/obvious_label_devicesoftdevice"
        app:layout_constraintTop_toBottomOf="@+id/featuredevicebootlabel"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/featuredevicesoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="7.8.9"
        android:text="@string/obvious_device_blank"
        app:layout_constraintTop_toBottomOf="@+id/featuredeviceboot"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ListView
        android:id="@+id/featurelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/featureLabel"/>

    <TextView
        android:id="@+id/featureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/obvious_label_featurelist"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/featuredevicesoftlabel"
        app:layout_constraintBottom_toTopOf="@id/featurelist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
